Nu ser dem lite bätre ut

--- a/style.css
+++ b/style.css
@@ -38,14 +38,15 @@ a img {
 .mainMenuDiv {
     float: left;
     width: 100px;
-    height: 7px;
-    background-color: #45ad54;
+    height: 10px;
+    background-color: rgba(122,199,67,1);
     border: none;
     overflow: hidden;
     padding: 15px;
     margin-left: 80px;
     border-radius: 10px;
     text-align: match-parent;
+    font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
     .mainMenuDiv a {
@@ -86,6 +87,7 @@ h2 {
     min-height: 100px;
     overflow: hidden;
     margin-top: 0px;
+    font-size: 23px;
 }
 
     .listItem img {
@@ -98,7 +100,7 @@ h2 {
     width: 400px;
     float: left;
     padding: 20px;
-    margin-top: 20px;
+    margin-top: 7px;
 }
 
 footer {
@@ -147,7 +149,7 @@ h3 {
 /*Israa*/
 #content {
     background-color: rgba(118, 244, 79, 0.21);
-    width: 1000px;
+    width: 920px;
     min-height: 900px;
     margin: 0 auto;
     margin-top: 3px;
@@ -159,24 +161,24 @@ h3 {
 
 #text {
     float: left;
-    margin-left: 20px;
+    margin-left: 50px;
     text-align: center;
     border: 4px solid rgba(54, 163, 46, 0.83);
     border-radius: 20px;
     box-shadow: inset 0 0 0 3px rgba(54, 163, 46, 0.83), 0 2px 5px rgba(54, 163, 46, 0.83);
-    width: 950px;
+    width: 800px;
     height: 130px;
     color: #368a2b;
     font-size: 30px;
     font-family: "Comic Sans MS", cursive, sans-serif;
-    margin-top: 80px;
+    margin-top: 110px;
 }
 
 /*the navigation*/
 #meny div a {
     display: block;
     float: left;
-    width: 130px;
+    width: 110px;
     padding: 5px 10px 5px 10px;
     margin: 10px;
     margin-top: 30px;
@@ -199,25 +201,27 @@ h3 {
 }
 /*pic of the veckanslunch*/
 #veckanslunch {
-   
-    height:10px;
-    float:left;
-    border-color:rgba(181, 135, 45, 0.85);
-    border-image:fill;
-    margin-left:200px;
-    padding:30px;
-    position:relative;
-    align-content:center;
-
- 
+    height: 10px;
+    float: left;
+    border-color: rgba(181, 135, 45, 0.85);
+    border-image: fill;
+    margin-left: 200px;
+    padding: 30px;
+    position: relative;
+    align-content: center;
 }
 
-#veckanslunch img {
-    width: 480px;
-    height:120px;
-    align-items: center;
-    background: url(logo.jpg);
-    border-radius: 5px;
-    margin-top:0 auto;
-}
+    #veckanslunch img {
+        width: 480px;
+        height: 120px;
+        align-items: center;
+        background: url(logo.jpg);
+        border-radius: 5px;
+        margin-top: 0 auto;
+    }
 
+.text5 {
+    align-content: center;
+    padding: 30px;
+    font-size: 25px;
+}
