--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ nav {
     text-align: center;
     font-size: large;
     font: bold;
+    font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
     nav img {
@@ -74,6 +75,7 @@ h2 {
     color: #000;
     font-size: x-large;
     margin-left: 30px;
+    font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
 .listContainer {
@@ -88,6 +90,7 @@ h2 {
     overflow: hidden;
     margin-top: 0px;
     font-size: 23px;
+    font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
     .listItem img {
@@ -110,6 +113,7 @@ footer {
     font-size: medium;
     margin-bottom: 30px;
     text-align: center center;
+    font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
 a ReceptSidan {
@@ -221,7 +225,22 @@ h3 {
     }
 
 .text5 {
-    align-content: center;
+    align-self:flex-start;
     padding: 30px;
     font-size: 25px;
 }
+
+#aboutDescription {
+    font-size: 20px;
+    font-weight: normal;
+    resize: none;
+    overflow-y: scroll;
+    margin-left: 0 auto;
+    margin-top: 30px;
+    margin-right: 0 auto;
+    margin-bottom: 20px;
+    align-items:flex-end;
+    font-family:"Comic Sans MS", cursive, sans-serif;
+
+}
+
